--- a/DM2024-Lab2-Homework.ipynb
+++ b/DM2024-Lab2-Homework.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "### Student Information\n",
-    "Name:\n",
+    "Name: 邱逸庭\n",
     "\n",
-    "Student ID:\n",
+    "Student ID: 110070071\n",
     "\n",
-    "GitHub ID:\n",
+    "GitHub ID: Eric0801\n",
     "\n",
-    "Kaggle name:\n",
+    "Kaggle name: eating chew\n",
     "\n",
     "Kaggle private scoreboard snapshot:"
    ]
