--- a/DM2024-Lab2-Homework.ipynb
+++ b/DM2024-Lab2-Homework.ipynb
@@ -20,6 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![private scoreboard](/Users/chiuyiting/Documents/GitHub/DM2024-Lab2-Homework/img/pic0.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
@@ -952,7 +959,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!['dogge.jpg'](/pics/dogge.jpg)"
+    "!['dogge.jpg'](./pics/dogge.jpg)"
    ]
   },
   {
@@ -1164,6 +1171,375 @@
    "metadata": {},
    "source": [
     "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This part is on kaggle!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Import Data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load dependencies\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import nltk\n",
+    "import matplotlib.pyplot as plt\n",
+    "from collections import Counter\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report, accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/kaggle/input/dm-2024-isa-5810-lab-2-homework/tweets_DM.json\n",
+      "/kaggle/input/dm-2024-isa-5810-lab-2-homework/sampleSubmission.csv\n",
+      "/kaggle/input/dm-2024-isa-5810-lab-2-homework/data_identification.csv\n",
+      "/kaggle/input/dm-2024-isa-5810-lab-2-homework/emotion.csv\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[1], line 12\u001b[0m\n",
+      "\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/kaggle/input/dm-2024-isa-5810-lab-2-homework/tweets_DM.json\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
+      "\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f:\n",
+      "\u001b[0;32m---> 12\u001b[0m         data\u001b[38;5;241m.\u001b[39mappend(\u001b[43mjson\u001b[49m\u001b[38;5;241m.\u001b[39mloads(line))\n",
+      "\u001b[1;32m     13\u001b[0m f\u001b[38;5;241m.\u001b[39mclose()\n",
+      "\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'json' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "import pandas as pd \n",
+    "\n",
+    "import os\n",
+    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
+    "    for filename in filenames:\n",
+    "        print(os.path.join(dirname, filename))\n",
+    "\n",
+    "data = []\n",
+    "with open('/kaggle/input/dm-2024-isa-5810-lab-2-homework/tweets_DM.json', 'r') as f:\n",
+    "    for line in f:\n",
+    "        data.append(json.loads(line))\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract columns like \n",
+    "df = pd.DataFrame(data)\n",
+    "_source = df['_source'].apply(lambda x: x['tweet'])\n",
+    "df = pd.DataFrame({\n",
+    "    'tweet_id': _source.apply(lambda x: x['tweet_id']),\n",
+    "    'hashtags': _source.apply(lambda x: x['hashtags']),\n",
+    "    'text': _source.apply(lambda x: x['text']),\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read the rest CSV\n",
+    "emotion = pd.read_csv('/kaggle/input/dm-2024-isa-5810-lab-2-homework/emotion.csv')\n",
+    "data_identification = pd.read_csv('/kaggle/input/dm-2024-isa-5810-lab-2-homework/data_identification.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Merge datasets to include identifiers and emotion labels where applicable\n",
+    "df = pd.merge(df, data_identification, on='tweet_id', how='left')\n",
+    "\n",
+    "# Split the dataset into training and testing based on the 'identification' column\n",
+    "train_data = df.query(\"identification == 'train'\")\n",
+    "test_data = df.query(\"identification == 'test'\")\n",
+    "\n",
+    "# Integrate emotion labels with the training dataset\n",
+    "train_data = pd.merge(train_data, emotion, on='tweet_id', how='left')\n",
+    "\n",
+    "# Remove duplicate texts from the training set for cleaner data\n",
+    "train_data = train_data.drop_duplicates(subset='text', keep=False)\n",
+    "\n",
+    "# Randomly sample 20% of the training dataset for model training\n",
+    "train_sample = train_data.sample(frac=0.2, random_state=42)\n",
+    "\n",
+    "# Extract text (features) and emotion (target) from the sampled dataset\n",
+    "X_train_raw = train_sample['text']\n",
+    "y_train_raw = train_sample['emotion']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split training data into training and validation sets with stratified sampling\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train_raw, X_test_raw, y_train, y_test = train_test_split(\n",
+    "    X_train_raw, y_train_raw, test_size=0.2, random_state=42, stratify=y_train_raw\n",
+    ")\n",
+    "\n",
+    "# Convert text data to numerical features using TF-IDF vectorization\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "tfidf_vectorizer = TfidfVectorizer(max_features=3000)\n",
+    "X_train = tfidf_vectorizer.fit_transform(X_train_raw).toarray()\n",
+    "X_test = tfidf_vectorizer.transform(X_test_raw).toarray()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Label Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Map emotion categories to numerical labels for model training\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "LabelEncode = LabelEncoder()\n",
+    "y_train = LabelEncode.fit_transform(y_train)\n",
+    "y_test = LabelEncode.transform(y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Model (Random_Forest)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize and train a Random Forest classifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "RF = RandomForestClassifier(random_state=42)\n",
+    "RF.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Prediction "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict on validation set and calculate accuracy\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "y_pred = RF.predict(X_test)\n",
+    "val_accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Validation Accuracy: {val_accuracy:.4f}\")\n",
+    "\n",
+    "# Prepare test data by transforming its text features with the trained TF-IDF vectorizer\n",
+    "X_test_raw = test_data['text']\n",
+    "X_test = tfidf_vectorizer.transform(X_test_raw).toarray()\n",
+    "\n",
+    "# Predict emotions for the test data\n",
+    "y_test_pred = RF.predict(X_test)\n",
+    "y_test_labels = LabelEncode.inverse_transform(y_test_pred)\n",
+    "\n",
+    "\n",
+    "# Save the Dataframe in specific format\n",
+    "result_df = pd.DataFrame({\n",
+    "    'id': test_data['tweet_id'],\n",
+    "    'emotion': y_test_labels\n",
+    "})\n",
+    "\n",
+    "# Save predictions\n",
+    "result_df.to_csv('/kaggle/working/submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict on validation set and calculate accuracy\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "y_pred = RF.predict(X_test)\n",
+    "val_accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Validation Accuracy: {val_accuracy:.4f}\")\n",
+    "\n",
+    "# Prepare test data by transforming its text features with the trained TF-IDF vectorizer\n",
+    "X_test_raw = test_data['text']\n",
+    "X_test = tfidf_vectorizer.transform(X_test_raw).toarray()\n",
+    "\n",
+    "# Predict emotions for the test data\n",
+    "y_test_pred = RF.predict(X_test)\n",
+    "y_test_labels = LabelEncode.inverse_transform(y_test_pred)\n",
+    "\n",
+    "\n",
+    "# Save the Dataframe in specific format\n",
+    "result_df = pd.DataFrame({\n",
+    "    'id': test_data['tweet_id'],\n",
+    "    'emotion': y_test_labels\n",
+    "})\n",
+    "\n",
+    "# Save predictions\n",
+    "result_df.to_csv('/kaggle/working/submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>emotion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0x28b412</td>\n",
+       "      <td>anticipation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0x2de201</td>\n",
+       "      <td>anticipation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0x218443</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>0x2939d5</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>0x26289a</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id       emotion\n",
+       "2   0x28b412  anticipation\n",
+       "4   0x2de201  anticipation\n",
+       "9   0x218443           joy\n",
+       "30  0x2939d5           joy\n",
+       "33  0x26289a           joy"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "submission.head()"
    ]
   }
  ],
